# cowcounter

./: .gitignore  Cargo.toml  README.md
assets/: index.html  script.js  styles.css
src/: counter.rs  main.rs
